#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ichor, 0.1, lrpalmer@gmail.com)
AM_INIT_AUTOMAKE(foreign)
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_ARG_ENABLE( debug,
[  --enable-debug          Enable debugging (-g and not fullscreen).], debug_flag="debug" )
AC_SUBST(debug_flag)
if test "$debug_flag" == "debug" ; then
	CFLAGS="$CFLAGS -g"
else
	CFLAGS="$CFLAGS -DNDEBUG"
fi

CFLAGS="$CFLAGS -Wall -Wno-reorder -O2"

# Check for SDL
AM_PATH_SDL(1.2.0,, AC_MSG_ERROR(the SDL library is needed))
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

CXXFLAGS="$CFLAGS"

AC_ARG_WITH(scores-group,
[  --with-scores-group=group    Group for the high score table],
scores_group="$withval",scores_group="games")
AC_SUBST(scores_group)

AC_ARG_WITH(scores-user,
[  --with-scores-user=user    User for the high score table],
scores_user="$withval",scores_user="games")
AC_SUBST(scores_user)

scoredir='${localstatedir}/games/ichor'
AC_SUBST(scoredir)

# Checks for libraries.
AC_CHECK_LIB([GL], [glLoadIdentity])
AC_CHECK_LIB([GLU], [gluOrtho2D])
AC_CHECK_LIB([SDL_image], [IMG_Load])
AC_CHECK_LIB([SDL_ttf], [TTF_Init])
AC_CHECK_LIB([glut], [glutBitmapCharacter])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt])

AC_CONFIG_FILES([Makefile media/Makefile])
AC_OUTPUT
